--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-scroll": "^1.8.4",
     "sass": "^1.38.0"
   },
   "devDependencies": {
